start of maze layout and associated css

--- a/src/MazeGrid.css
+++ b/src/MazeGrid.css
@@ -1,5 +1,35 @@
+.maze-grid {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.maze-button {
+  background-color: #0091ff;
+  margin: 10px;
+  color: white;
+  cursor: pointer;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+}
+
+.maze {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+}
+
 .cell {
-  background-color: black;
   width: 40px;
   height: 40px;
   border: 1px solid white;
