--- a/src/MazeGrid.css
+++ b/src/MazeGrid.css
@@ -6,6 +6,12 @@
   height: 100vh;
 }
 
+.controls {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 20px;
+}
+
 .maze-button {
   background-color: #0091ff;
   margin: 10px;
