dynamic board, finished BFS/DFS algorithms

--- a/src/MazeGrid.css
+++ b/src/MazeGrid.css
@@ -45,6 +45,10 @@
   background-color: black;
 }
 
+.cell.visited {
+  background-color: lightblue;
+}
+
 .cell.path {
   background-color: white;
 }
